--- a/_config.yml
+++ b/_config.yml
@@ -48,12 +48,13 @@ social:
 google_site_verification: google_meta_tag_verification # change to your verification string
 # --------------------------
 
-google_analytics:
-  id: ''              # fill in your Google Analytics ID
-  # Google Analytics pageviews report settings
-  pv:
-    proxy_endpoint:   # fill in the Google Analytics superProxy endpoint of Google App Engine
-    cache_path:       # the local PV cache data, friendly to visitors from GFW region
+# Analytics
+analytics:
+  provider               : "google-gtag"
+  # false (default), "google", "google-universal", "google-gtag", "custom"
+  google:
+    tracking_id          : "G-Q7PWLG5WYT"
+    anonymize_ip         : # true, false (default)
 
 # Prefer color scheme setting.
 #
