google analytics 테스트

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,8 @@ social:
 
 google_site_verification:
 # --------------------------
+google_analytics:
+  id: 'G-Q7PWLG5WYT'
 
 # Analytics
 analytics:
